Fixed menu tabs overlap

--- a/plugins/themes/scielo/scielo.css
+++ b/plugins/themes/scielo/scielo.css
@@ -82,6 +82,10 @@ form {
 	border-top: none;
 }
 
+#content ul.menu {
+	margin-bottom: 10px;
+}
+
 #navbar {
 	border-bottom: none;
 }
